# dwm

./: .gitignore  CMakeLists.txt  README.md  _prj.sh  config.h  drw.c  drw.h  dwm.1  dwm.c  dwm.h  dwmctl.c  dwmquit  dwmswallow  transient.c  util.c  util.h
test/: startup.sh  test.sh
